finished insertion sort

--- a/Lab_II.ipynb
+++ b/Lab_II.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,14 +27,6 @@
     "import timeit \n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "---"
    ]
   },
   {
@@ -66,6 +58,7 @@
     "        self.sorted_items=[]\n",
     "\n",
     "       ### your implementation for bubble sort goes here \n",
+    "       \n",
     "\n",
     "    def get_sorted(self,):\n",
     "        return self.sorted_items"
@@ -73,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +74,14 @@
     "    def __init__(self, items_to_sort):\n",
     "        self.items = items_to_sort\n",
     "        self.sorted_items=[]\n",
-    "\n",
-    "       ### your implementation for insertion sort goes here \n",
-    "\n",
+    "        for i in range(1, len(self.items)):\n",
+    "            key = self.items[i]\n",
+    "            j = i - 1\n",
+    "            while j >= 0 and key < self.items[j]:\n",
+    "                self.items[j + 1] = self.items[j]\n",
+    "                j -= 1\n",
+    "            self.items[j + 1] = key\n",
+    "    \n",
     "    def get_sorted(self,):\n",
     "        return self.sorted_items"
    ]
@@ -103,13 +101,6 @@
     "\n",
     "    def get_sorted(self,):\n",
     "        return self.sorted_items"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "___"
    ]
   },
   {
