--- a/Lab_II.ipynb
+++ b/Lab_II.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,20 @@
     "        self.sorted_items=[]\n",
     "\n",
     "       ### your implementation for bubble sort goes here \n",
-    "       \n",
+    "        n = len(self.items)\n",
+    "\n",
+    "        swapped = False\n",
+    "\n",
+    "        for i in range(n - 1):\n",
+    "\n",
+    "            for j in range(0, n - i - 1):\n",
+    "\n",
+    "                if self.items[j] > self.items[j + 1]:\n",
+    "                    swapped = True\n",
+    "                    self.items[j], self.items[j + 1] = self.items[j + 1], self.items[j]\n",
+    "\n",
+    "            if not swapped:\n",
+    "                return\n",
     "\n",
     "    def get_sorted(self,):\n",
     "        return self.sorted_items"
@@ -692,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
