--- a/Lab_II.ipynb
+++ b/Lab_II.ipynb
@@ -79,6 +79,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 7, 10, 20, 34, 63]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = [4, 10, 7, 63, 0, 34, 20]\n",
+    "BubbleSort(arr)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [],
