--- a/Lab_II.ipynb
+++ b/Lab_II.ipynb
@@ -97,7 +97,16 @@
     "        self.items = items_to_sort\n",
     "        self.sorted_items=[]\n",
     "\n",
-    "       ### your implementation for selection sort goes here \n",
+    "       ### your implementation for selection sort goes here\n",
+    "        n = len(self.items)\n",
+    "        for pos in range (0 , n-1):\n",
+    "            \n",
+    "            best = pos\n",
+    "            for i in range (pos + 1 , n):\n",
+    "                if self.items[i] < self.items[best]:\n",
+    "                    best = i\n",
+    "            self.items[best], self.items[pos] = self.items[pos], self.items[best]\n",
+    "            \n",
     "\n",
     "    def get_sorted(self,):\n",
     "        return self.sorted_items"
